// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Text> renders 1`] = `
<Text
  style={
    Array [
      Object {
        "fontFamily": undefined,
        "textAlignVertical": "center",
      },
      Object {
        "fontSize": 16,
        "lineHeight": 24,
      },
      undefined,
      false,
      undefined,
      undefined,
    ]
  }
/>
`;

exports[`<Text> when {caption} 1`] = `
<Text
  style={
    Array [
      Object {
        "fontFamily": undefined,
        "textAlignVertical": "center",
      },
      Object {
        "fontSize": 12,
      },
      undefined,
      false,
      undefined,
      undefined,
    ]
  }
>
  Lorem Ipsum is simply dummy text of the printing and typesetting industry.
</Text>
`;

exports[`<Text> when {color} 1`] = `
<Text
  style={
    Array [
      Object {
        "fontFamily": undefined,
        "textAlignVertical": "center",
      },
      Object {
        "fontSize": 16,
        "lineHeight": 24,
      },
      undefined,
      false,
      Object {
        "color": "#e85a7e",
      },
      undefined,
    ]
  }
>
  Lorem Ipsum is simply dummy text of the printing and typesetting industry.
</Text>
`;

exports[`<Text> when {headline} 1`] = `
<Text
  style={
    Array [
      Object {
        "fontFamily": undefined,
        "textAlignVertical": "center",
      },
      Object {
        "fontSize": 32,
        "fontWeight": "700",
      },
      undefined,
      false,
      undefined,
      undefined,
    ]
  }
>
  Lorem Ipsum is simply dummy text of the printing and typesetting industry.
</Text>
`;

exports[`<Text> when {lighten} 1`] = `
<Text
  lighten={true}
  style={
    Array [
      Object {
        "fontFamily": undefined,
        "textAlignVertical": "center",
      },
      Object {
        "fontSize": 16,
        "lineHeight": 24,
      },
      undefined,
      false,
      undefined,
      undefined,
    ]
  }
>
  Lorem Ipsum is simply dummy text of the printing and typesetting industry.
</Text>
`;

exports[`<Text> when {numberOfLines} 1`] = `
<Text
  numberOfLines={2}
  style={
    Array [
      Object {
        "fontFamily": undefined,
        "textAlignVertical": "center",
      },
      Object {
        "fontSize": 16,
        "lineHeight": 24,
      },
      undefined,
      false,
      undefined,
      undefined,
    ]
  }
>
  Lorem Ipsum is simply dummy text of the printing and typesetting industry.
</Text>
`;

exports[`<Text> when {style} 1`] = `
<Text
  style={
    Array [
      Object {
        "fontFamily": undefined,
        "textAlignVertical": "center",
      },
      Object {
        "fontSize": 16,
        "lineHeight": 24,
      },
      undefined,
      false,
      undefined,
      Object {
        "color": "orange",
      },
    ]
  }
>
  Lorem Ipsum is simply dummy text of the printing and typesetting industry.
</Text>
`;

exports[`<Text> when {subtitle} 1`] = `
<Text
  style={
    Array [
      Object {
        "fontFamily": undefined,
        "textAlignVertical": "center",
      },
      Object {
        "fontSize": 24,
      },
      undefined,
      false,
      undefined,
      undefined,
    ]
  }
>
  Lorem Ipsum is simply dummy text of the printing and typesetting industry.
</Text>
`;
